--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -2061,6 +2061,10 @@ footer{
             video{
                 max-width: 100%;
             }
+            ul{
+              list-style: disc;
+              padding-left: 18px;
+            }
         }
         .briefcase {
             margin-top:20px;
