--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -10799,6 +10799,9 @@ span.smilies-title {
   }
 }
 .agbutton .error-msg{color: red;}
+.jw-sharing-dock-btn {
+  display: none;
+}
 
 /* CSS For Story Modal Popup and Carousel */
 .story-section iframe.embedgalleryt{
