--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11327,3 +11327,4 @@ span.file a{pointer-events: none; color: #2f2f2f;}
   .node-supplement-form{
     @extend .image-repo-browse;
   }
+  #idIssue{color: red;}
