--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -2942,12 +2942,12 @@
   /*CSS start program landing page*/
   #block-views-video-landing-header-block .video-landing-header {
     background: #000;
-    padding: 0 15px 15px 15px;
+    padding: 0 15px 20px 15px;
   }
   #block-views-video-landing-header-block .video-header-left .video {
     float: left;
     width: 84.5%;
-    padding: 10px;
+    padding: 15px 10px;
     border: 1px solid #242424;
   }
   #block-views-video-landing-header-block .video-header-left .social-likes {
@@ -2964,7 +2964,7 @@
     float: none;
   }
   #block-views-video-landing-header-block .video-header-left .social-likes ul li a {
-    padding: 20px 5px 19px 10px;
+    padding: 20.2px 5px 20.2px 10px;
   }
   #block-views-video-landing-header-block .video-header-left .social-likes ul li a span {
     display: inline-block;
