--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3031,13 +3031,13 @@
   #block-views-video-landing-header-block{
     .video-landing-header{
       background: #000;
-      padding: 0 15px 15px 15px;    
+      padding: 0 15px 20px 15px;    
     }
     .video-header-left{
       .video{
         @include float(left);
         width: 84.5%;
-        padding: 10px;
+        padding: 15px 10px;
         border: 1px solid #242424;
       }
       .social-likes  {
@@ -3051,7 +3051,7 @@
           li{
             @include float(none);
             a{
-              padding:  20px 5px 19px 10px;
+              padding:  20.2px 5px 20.2px 10px;
               span{
                 display: inline-block;    
               }
