--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -2065,6 +2065,10 @@ footer{
               list-style: disc;
               padding-left: 18px;
             }
+            a{
+              color: #1a3c8d;
+              &:hover{text-decoration: underline;}
+            }
         }
         .briefcase {
             margin-top:20px;
