ITG-3261 #time 6h #comment Done for default section, photo and video templates.

--- a/sites/all/themes/itg/css/layout-manager.css
+++ b/sites/all/themes/itg/css/layout-manager.css
@@ -3360,3 +3360,24 @@ img {
   font-weight: 700;
   color: #585858;
 }
+
+.widget-placeholder {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #f1f1f1;
+  z-index: 1;
+}
+.widget-placeholder span {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  text-align: center;
+  font-size: 28px;
+  text-transform: uppercase;
+  color: #ababab;
+  font-weight: 500;
+  margin-top: -10px;
+}
