--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -6819,7 +6819,8 @@ div.node{
   max-width: 100%;
   position: relative;
   top: 0;
-  vertical-align: top;;
+  vertical-align: top;
+  z-index: 9;
   .widget-title-wrapper{
     display: inline-block;
     vertical-align: top;
