--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -5241,6 +5241,7 @@ h1.category-heading {
 }
 #block-views-video-landing-header-block .video-header-left .iframe-video {
   padding-bottom: 72.3%;
+  padding-top: 0;
 }
 #block-views-video-landing-header-block .video-header-left .social-likes {
   float: none;
