--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -3962,6 +3962,7 @@ h1.category-heading{
         }
         .iframe-video{
             padding-bottom: 72.3%;
+            padding-top: 0;
         }
         @include video-detail-page-sociallike;
         .slick-slider{
