ITG-3229 #time 6h #comment Done.

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -267,7 +267,7 @@
 
   /*css start osscar page */
   /* css start vertical bar */
-  #block-itg-menu-manager-vertical-menu {
+  .region-vertical-menu {
     display: none;
   }
 
