--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -263,7 +263,7 @@
   }
   /*css start osscar page */
   /* css start vertical bar */
-  #block-itg-menu-manager-vertical-menu{
+  .region-vertical-menu{
     display: none;
   }
   /*end css vertical bar */
