--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -8855,15 +8855,25 @@ section.sidebar{
 /*eND CSS LIVE tv */
 
 /*vertical menu fixed position*/
+/*body.not-front{display: table; width: 100%;}*/
+.front{
+  #content{
+    display: inline-block; vertical-align: top; width: 100%;
+  }
+}
+.region-vertical-menu{
+  float: left;
+  margin-left: -75px !important;
+  padding: 100px 0 50px;
+}
 #block-itg-menu-manager-vertical-menu{
-    left: -60px;
-    position: absolute;
-    top: 100px;        
     background: #f2f2f2;    
     border-radius: 3px;
     box-shadow: 0px 0px 4px #ccc;
     text-align: center;
-    border-right: 1px solid #b3b3b3;     
+    border-right: 1px solid #b3b3b3;
+    /*margin-top: 100px;*/
+    width: 60px;
     ul{       
         -webkit-transition: all 1s ease-in-out;
         -moz-transition: all 1s ease-in-out;
@@ -10094,6 +10104,7 @@ h1.about-us-heading{
 /*css End common highlight */            
 
 /*css start home page breaking new */
+.region-breaking-news{display: inline-block; vertical-align: top; width: 100%;}
 .breakingnew-home{
     margin-bottom:40px;
     font-family: roboto;
@@ -10540,7 +10551,7 @@ span.smilies-title {
     }   
   } 
 }
-.node-type-photogallery, .node-type-videogallery, .node-type-podcast, .section-videos, .section-photo{
+.node-type-photogallery, .node-type-videogallery, .node-type-podcast, [class*="section-videos"], [class*="section-photo"]{
     #block-itg-layout-manager-front-end-breadcrumb{
         background: #171717;   
     }    
