ITG-3169 #time 2h #comment Done.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -4150,6 +4150,10 @@ h1.category-heading {
   display: none;
 }
 
+.view-blog-listing .catagory-listing .detail .blog-anchor {
+  color: #bb0a0a;
+}
+
 /*End category wise content list css*/
 /*Start anchors listing css*/
 .view-widget-anchors-listing .anchor-listing {
@@ -10657,8 +10661,6 @@ section.sidebar .block-itg-ads {
   box-shadow: 0px 0px 4px #ccc;
   text-align: center;
   border-right: 1px solid #b3b3b3;
-  /*margin-top: 100px;*/
-  width: 60px;
 }
 #block-itg-menu-manager-vertical-menu ul {
   -webkit-transition: all 1s ease-in-out;
