--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -2973,10 +2973,9 @@ body.has-cart-popup {
 .rippleEffect {
   animation: rippleDrop .8s linear;
 }
-.trending-list{
-  .rippleEffect {
-    animation: rippleDrop .5s linear;
-  }
+
+.trending-list .rippleEffect {
+  animation: rippleDrop .8s linear;
 }
 
 @keyframes rippleDrop {
@@ -3499,6 +3498,10 @@ body .program-livetv.effect-added .light-on-text {
 }
 .multiple-photo-disc .slick-list + .fa-chevron-right.slick-disabled {
   display: none !important;
+}
+
+.multiple-photo-disc .fa-chevron-left.slick-disabled + div .prev-story-link {
+  display: block;
 }
 
 .story-associate-content .view-photo-landing-slider .videogallery-slider .fa-chevron-left, .story-associate-content .view-photo-landing-slider .videogallery-slider .fa-chevron-right {
