--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -10398,7 +10398,8 @@ span.file a{pointer-events: none; color: #2f2f2f;}
       font-size: 12px;
       position: relative;
       .fa-arrows{
-        
+        float: left;
+        margin: 2px 2px 0 0;
       }
       .byline_publish {
         float: left;
