--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11131,6 +11131,13 @@ span.close_btt {
 
 
 
+.sidebar-section-photo{
+  .we_may_suggest{
+    .widget-title{display: none;}
+  }
+}
+
+
 @media (min-width: 768px) {
   .modal-dialog {
     width: 960px;
