--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -2335,33 +2335,34 @@ footer{
     }
     .story-expert-opinion{
         background: #f5f5f5;
-        width: 320px;
+        width: 330px;
         float: left;
-        margin-right: 20px;
+        margin-right: 15px;
         margin-bottom: 5px;
-        padding: 10px 15px;
+        padding: 13px 10px 13px 15px;
         font-family: $itg-robotoslab;
         h4{
             font-family: "Roboto Slab",sans-serif;
-            font-size: 22px;
+            font-size: 20px;
             font-weight: 700;    
             color:#000;
         }
         img{
-            width: 70px;
-            height: 70px;
+            width: 65px;
+            height: 65px;
             border-radius: 100%; 
-            border: 2px solid #ddd; 
+            border: 3px solid #bcbcbc; 
         }
         .expert-detail{
-                margin-top: 25px;
-                margin-bottom: 25px;
+                margin-top: 22px;
+                margin-bottom: 27px;
         }
         .left-side{
+          padding-right: 0;
             p.name{
                 font-size: 14px;
                 line-height: 18px;
-                margin-bottom: 5px;
+                margin-bottom: 2px;
                 color: #000;
                 padding: 0;
             }
@@ -2372,19 +2373,23 @@ footer{
                 padding: 0;
             }
         }
+        .right-side{
+          text-align: right;
+        }
         h2{
             font-family: $itg-robotoslab;
             color:#000;
+            font-size: 26px;
             &:before, &:after{
-                width: 20px;
-                height: 16px;
+                width: 30px;
+                height: 25px;
                 content: '';
-                background: url(../images/up-quotes.jpg) no-repeat center center;
+                background: url(../images/up-quotes.jpg) no-repeat center 0;
                 display: inline-block;
                 vertical-align: top;
             }
             &:after{
-                background: url(../images/down-quote.jpg) no-repeat center center;
+                background: url(../images/down-quote.jpg) no-repeat 6px 3px;
             }
         }
     }
@@ -3947,7 +3952,11 @@ h1.category-heading{
 }
 #block-views-video-landing-header-block{
     color:#aaa8a9;
-    background: #171717;     
+    background: #171717; 
+    margin-top: 14px;
+    .ad-blocker:empty {
+      display: none;
+    }
     .video-landing-header{
         background: transparent;
         padding:0;
@@ -10577,6 +10586,7 @@ span.smilies-title {
     font-size: 24px;
     margin-bottom: 10px;
     line-height: 34px;
+    padding-top: 7px;
 }
 
 .promote-btn{
